--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,54 +1,57 @@
-.topbar{
+.topbar {
     width: 100%;
     height: 50px;
     background-color: white;
-}
-
-.topbarWrapper{
+    position: sticky;
+    top: 0;
+    z-index: 999;
+  }
+  
+  .topbarWrapper {
     height: 100%;
     padding: 0px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.logo{
+  }
+  
+  .logo {
     font-weight: bold;
     font-size: 30px;
-    color: darkviolet;
+    color: darkblue;
     cursor: pointer;
-}
-
-.topbarIconContainer{
+  }
+  
+  .topRight{
+      display: flex;
+      align-items: center;
+  }
+  
+  .topbarIconContainer {
     position: relative;
     cursor: pointer;
     margin-right: 10px;
     color: #555;
-}
-
-.topRight{
-    display: flex;
-    align-items: center;
-}
-
-.topIconBag{
-    width: 15px;
-    height: 15px;
-    position: absolute;
-    top: -5px;
-    right: 0px;
-    background-color: red;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-}
-
-.topAvatar{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: pointer;
-}
+  }
+  
+  .topIconBadge{
+      width: 15px;
+      height: 15px;
+      position: absolute;
+      top: -5px;
+      right: 0px;
+      background-color: red;
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 10px;
+  }
+  
+  .topAvatar{
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      cursor: pointer;
+  }
