--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -18,7 +18,7 @@
   .logo {
     font-weight: bold;
     font-size: 30px;
-    color: darkblue;
+    color: darkviolet;
     cursor: pointer;
   }
   
